# Fuel-Bill-Extraction-UsingLLM

./: .env  .gitignore  README.md  app.py  extracted_bills.xlsx  main.py  pyproject.toml  requirements.txt
